[package]
name = "pow"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = [ "derive" ] }

bincode = "1.3"
rand = "0.8"
structopt = "0.3"

[dependencies.tokio]
version = "1.0"
features = [ "net", "sync", "io-util", "rt-multi-thread", "macros" ] 

[[bin]]
name = "client"
path = "src/bin/client/main.rs"

[[bin]]
name = "server"
path = "src/bin/server/main.rs"

[[bin]]
name = "dummy"
path = "dummy.rs"

